**fixing hover photo couverture etablissement **positionnement scrollbar sur la page regiter

--- a/client/app/etablissementPages/etablissementPages.css
+++ b/client/app/etablissementPages/etablissementPages.css
@@ -4,4 +4,5 @@
 
 .entry2{
     width: 100%;
+    z-index: 0;
 }
